--- a/update/index.html
+++ b/update/index.html
@@ -52,6 +52,8 @@ Nu sunt probleme, doar solutii -->
 	<br>
 	<p align="center"> There's no <u><i>problems</i></u>, only <u><i>solutions</i></u>. </p>
 	
+	<img src="/src/img/AvatarInstagram.png" alt="AXELL">
+	
 	<p>&nbsp;</p>
 	
 	<!--<p align="left"> <u>Realizations after 10 years of gaming.</u> </p>
