--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Nu sunt probleme, doar solutii -->
 	<br>
 	<p align="center"> There's no <u><i>problems</i></u>, only <u><i>solutions</i></u>. </p>
 	
-	<img src="/src/img/axell.png" alt="AXELL">
+	<img src="./src/img/axell.png" alt="AXELL">
 	
 	<p>&nbsp;</p>
 	
